fix spacing

--- a/src/styles/pages/Initiative.scss
+++ b/src/styles/pages/Initiative.scss
@@ -1,13 +1,14 @@
 .flex-container {
   display: flex;
+  position: relative;
 }
 
 .left-col {
-  width: 100%;
+  width: 70%;
 }
 
 .right-col {
-  width: 100%;
+  width: 30%;
 
   &.volunteers-container {
     padding: 12px;
